<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.plankr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.plankr.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.plankr.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.plankr.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.plankr.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.plankr.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <activity
        android:id="@+id/auftrag"
        android:name="com.example.plankr.Auftrag"
        android:label="activity_auftrag"
        tools:layout="@layout/activity_auftrag" />
    <activity
        android:id="@+id/main"
        android:name="com.example.plankr.Main"
        android:label="activity_main3"
        tools:layout="@layout/activity_main3" />
    <activity
        android:id="@+id/profil"
        android:name="com.example.plankr.Profil"
        android:label="activity_profil"
        tools:layout="@layout/activity_profil" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.plankr.ui.login.LoginActivity"
        android:label="activity_registration"
        tools:layout="@layout/activity_registration" />
    <activity
        android:id="@+id/sidebar"
        android:name="com.example.plankr.Sidebar"
        android:label="activity_sidebar"
        tools:layout="@layout/activity_sidebar" />
    <navigation
        android:id="@+id/navigation"
        app:startDestination="@id/registrationActivity" >
        <activity
            android:id="@+id/registrationActivity"
            android:name="com.example.plankr.RegistrationActivity"
            android:label="content_registration"
            tools:layout="@layout/content_registration" />
        <action
            android:id="@+id/action_global_sidebar"
            app:destination="@id/sidebar" />
        <action
            android:id="@+id/action_global_loginActivity"
            app:destination="@id/loginActivity" />
    </navigation>
</navigation>